namespace DataLab.Dto.Psql
{
    public class University
    {
        public int Id { get; set; }
        public string Name { get; set; }
    }
}